name:           stm
version:        2.4.3
license:        BSD3
license-file:   LICENSE
maintainer:     libraries@haskell.org
bug-reports:    http://ghc.haskell.org/trac/ghc/newticket?component=libraries%20%28other%29&keywords=stm
synopsis:       Software Transactional Memory
category:       Concurrency
description:    A modular composable concurrency abstraction.
build-type:     Simple
cabal-version:  >=1.10
tested-with:    GHC==7.6.3, GHC==7.6.2, GHC==7.6.1, GHC==7.4.2, GHC==7.4.1, GHC==7.2.2, GHC==7.2.1, GHC==7.0.4, GHC==7.0.3, GHC==7.0.2, GHC==7.0.1, GHC==6.12.3

extra-source-files:
    changelog.md

source-repository head
    type:     git
    location: http://git.haskell.org/packages/stm.git

source-repository this
    type:     git
    location: http://git.haskell.org/packages/stm.git
    tag:      stm-2.4.3-release

library
    default-language: Haskell98
    other-extensions:
        CPP
        DeriveDataTypeable
        FlexibleInstances
        MagicHash
        MultiParamTypeClasses
        UnboxedTuples
    if impl(ghc >= 7.2)
        other-extensions: Trustworthy

    build-depends:
        base  >= 4.2 && < 4.8,
        array >= 0.3 && < 0.6

    exposed-modules:
        Control.Concurrent.STM
        Control.Concurrent.STM.TArray
        Control.Concurrent.STM.TVar
        Control.Concurrent.STM.TChan
        Control.Concurrent.STM.TMVar
        Control.Concurrent.STM.TQueue
        Control.Concurrent.STM.TBQueue
        Control.Concurrent.STM.TSem
        Control.Monad.STM
    other-modules:
        Control.Sequential.STM

    ghc-options: -Wall
