name:           stm
version:        2.4.4.1
-- don't forget to update changelog.md file!
license:        BSD3
license-file:   LICENSE
maintainer:     libraries@haskell.org
bug-reports:    https://ghc.haskell.org/trac/ghc/newticket?component=libraries%20%28other%29&keywords=stm
synopsis:       Software Transactional Memory
category:       Concurrency
description:    A modular composable concurrency abstraction.
build-type:     Simple
cabal-version:  >=1.10
tested-with:    GHC==7.10.*, GHC==7.8.*, GHC==7.6.*, GHC==7.4.*, GHC==7.2.*, GHC==7.0.*

extra-source-files:
    changelog.md

source-repository head
    type:     git
    location: http://git.haskell.org/packages/stm.git

library
    default-language: Haskell2010
    other-extensions:
        CPP
        DeriveDataTypeable
        FlexibleInstances
        MagicHash
        MultiParamTypeClasses
        UnboxedTuples
    if impl(ghc >= 7.2)
        other-extensions: Trustworthy
    if impl(ghc >= 7.9)
        other-extensions: Safe

    build-depends:
        base  >= 4.3 && < 4.10,
        array >= 0.3 && < 0.6

    exposed-modules:
        Control.Concurrent.STM
        Control.Concurrent.STM.TArray
        Control.Concurrent.STM.TVar
        Control.Concurrent.STM.TChan
        Control.Concurrent.STM.TMVar
        Control.Concurrent.STM.TQueue
        Control.Concurrent.STM.TBQueue
        Control.Concurrent.STM.TSem
        Control.Monad.STM
    other-modules:
        Control.Sequential.STM

    ghc-options: -Wall
