cabal-version:       2.2
name:                stm-bench
version:             0

synopsis:            External testsuite for stm package
category:            Benchmarking
license:             BSD-3-Clause
maintainer:          libraries@haskell.org
tested-with:         GHC==8.8.*, GHC==8.6.*, GHC==8.4.*, GHC==8.2.*, GHC==8.0.*, GHC==7.10.*, GHC==7.8.*, GHC==7.6.*, GHC==7.4.*, GHC==7.2.*, GHC==7.0.*
description:
  The benchmarks are in a separate project to avoid cyclic dependencies.

benchmark chanbench
    type:             exitcode-stdio-1.0
    main-is:          ChanBench.hs
    other-modules:
        Async
    build-depends:    base, stm, tasty, tasty-bench
    default-language: Haskell2010
    ghc-options:      -O2 -threaded -with-rtsopts=-N
