cabal-version:       2.2
name:                stm-bench
version:             0

synopsis:            External testsuite for stm package
category:            Benchmarking
license:             BSD-3-Clause
maintainer:          libraries@haskell.org
tested-with:         GHC==9.6.2, GHC==9.4.7, GHC==9.2.8, GHC==9.0.2, GHC==8.10.7, GHC==8.8.4, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2, GHC==8.0.2
description:
  The benchmarks are in a separate project to avoid cyclic dependencies.

benchmark chanbench
    type:             exitcode-stdio-1.0
    main-is:          ChanBench.hs
    build-depends:    base >= 4.9 && < 4.20, stm, async >= 2.0, tasty, tasty-bench
    default-language: Haskell2010
    ghc-options:      -O2 -threaded -with-rtsopts=-N
